# slipdeck

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
slipdeck/: __init__.py  cli.py  pdf_creator.py  pdf_processor.py
slipdeck/config/: config_manager.py
slipdeck/models/: order.py  pull_card.py
slipdeck/utilities/: price_util.py
tests/: __init__.py  test_cli.py
